Siberian Plan Decisions

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -195,6 +195,26 @@
   Russian_Assassination_Attempt.13.d:0 ""
   Russian_Assassination_Attempt.13.a:0 "Good, deploy the jet troopers."
 
+  Russian_Flavour.1.t:0 "FNCC Settlement Magadan"
+  Russian_Flavour.1.d:0 ""
+  Russian_Flavour.1.a:0 "You can practically smell the gold!" 
+
+  Russian_Flavour.2.t:0 "Area Zero expresses interest in Magadan"
+  Russian_Flavour.2.d:0 ""
+  Russian_Flavour.2.a:0 "Greenlight the cooperation"
+  Russian_Flavour.2.b:0 "This will breach Area Zero's secrecy, we cannot allow this!" 
+
+  Russian_Flavour.3.t:0 "Construction of the Magadan Port"
+  Russian_Flavour.3.d:0 ""
+  Russian_Flavour.3.a:0 "Invest a little to make it happen"
+  Russian_Flavour.3.b:0 "A port in the Siberian Far North? Are you pulling my leg?" 
+
+  Russian_Flavour.4.t:0 "Settling the CSPC Headquarter"
+  Russian_Flavour.4.d:0 ""
+  Russian_Flavour.4.a:0 "Chelyabinsk"
+  Russian_Flavour.4.b:0 "Irkutsk"
+  Russian_Flavour.4.c:0 "Vladivostok" 
+
   ##########################
   # GUI DESCRIPTIONS
   ##########################
@@ -448,6 +468,32 @@
   PB_RUS_Area_Zero_Spend_Assets_Large_tt:0 "§R-50§! £autonomy_texticon §YAssets§!"
 
   PB_Has_Not_Requested_Data_Recently_tt:0 "Has §YNOT§! requested research data in the last six months."
+
+  PB_RUS_Siberian_Plan:0 "Implementation of the Siberian Plan"
+  PB_RUS_Siberian_Plan_desc:0 "Siberia today stands like the Wild West of North America: barren, barely populated yet promising immense material wealth in the form of its natural resources and simple vastness. That promise cannot be utilized in our current Siberia, as the vastness of the land is simultaneously a boon and a curse. Siberia's infrastructure is lacking, the population consists of illiterate peasants and its villages house little to no economic activity or potential. Radical transformation is necessary. \n\nThe §YSiberian Plan§! charts the problems and issues of the area with the intention of bringing economic civilization to this wasteland in the near future. Across the European part of the Russian Empire, engineers, chemists, architects, officers and bureaucrats are shipped to work in the Siberian wilds. They all share the common goal of turning the infertile fertile, the impoverished wealthy and the uninteresting fascinating." 
+
+  PB_RUS_Siberian_Plan_Countdown:0 "The Siberian Plan Deadline!" 
+  PB_RUS_Modernize_the_Trans_Siberian_Countdown:0 "Modernization of the Trans-Siberian Railway"
+  PB_RUS_Modernize_the_Trans_Siberian_Countdown_desc:0 "Like an artery of steel, the Trans-Siberian Railway cuts through the cold Siberian wild and connects the Russian Pacific Coast with the European centre of power in the West. Still, the Trans-Siberian is somewhat antiquated, a product of the early Industrial Revolution in Russia, and is in need of serious modernization if it wants to compete with the wonders of engineering in Europe. Through electrification, swamp drainage and modern railway technology implementation, the Trans-Siberian Railway may become the vital lifeline of the entire Siberian Plan." 
+  PB_RUS_Industrialize_Kuznetsk_Basin_Countdown:0 "Industrialize the Kuznetsk Basin"
+  PB_RUS_Industrialize_Kuznetsk_Basin_Countdown_desc:0 "The riches of the Kuznetsk Basin in the East of Siberia has been known to the Russians since the 18th century, as steel mills dot the region. However, the sheer scale of its coal riches have only recently been realized, as the Kuznetsk Basin supposedly holds almost as much coal as the Ukrainian basin. With this revelation, industrialization has arrived to the region. As part of the Siberian plan, the Kuznetsk Basin's steel production will have to be expanded at a rapid pace, granting us a local source of steel for the other projects of the Siberian Plan." 
+
+  PB_RUS_Form_the_Far_North_Construction_Company:0 "Form the Far North Construction Company"
+  PB_RUS_Form_the_Far_North_Construction_Company_desc:0 "The discovery of gold and other precious minerals in Magadan during the first and second Kolmya expeditions was one of the main impetus of the Siberian Plan and the thinking that supported the exploitation and industrialization of Siberia. This golden boon is, however, guarded by meters of snow, protected by the intensely harsh climate of Northern Siberia. The proposal has thus been to give form to an entity with the goal of harvesting the gold deposits of the Far North in the form of the Far North Construction Company, headed by famed geologist Yuri Bilibin and under the management of the secret police and the interior ministry. \n\nThe mandate of the FNCC is clear: the extraction of valueable minerals from Northern Siberia. Under this mandate, the FNCC has the clearance to construct and operate the logistics and transport of the area, monitor its infrastructure and secure valueable labour pools from the Katorga colonies. With this injection of government resources, Magadan's gold will find its way into the treasury in no time." 
+  PB_RUS_Establish_Centralized_HQ:0 "Establish the Central Siberian Plan Committee"
+  PB_RUS_Establish_Centralized_HQ_desc:0 "With the gargantuan size of the task ahead, a bureaucracy needs to be put in place to make sure that our resources are used as effectively as possible and that the river of cash and materials flowing into Siberia is not disturbed by corruption, incompetence or both. The Central Siberian Plan Committee (CSPC) will oversee the process and allow us to intervene in time when necessary."
+  PB_RUS_Intensify_Katorga_Colonization:0 "Expand Katorga Colonies"
+  PB_RUS_Intensify_Katorga_Colonization_desc:0 "Katorga is the Russian system of penal laws most commonly known for the utilization of criminals and state enemies in hard labour colonies in Russia's Far East. Despite its brutal nature, the Katorga system has allowed for immense industrial progress in Siberia. Expanding these penal colonies grants Siberia a hardy labour pool perfect for the intense manual labour required to industrialize the region properly." 
+  PB_RUS_Improve_Soil_Productivity:0 "\"Stimulate\" Farmer Resettlement"
+  PB_RUS_Test_Lysenkoist_Agriculturalism_in_Siberia:0 "Test the Winter Grain Hypothesis in Siberia"
+  PB_RUS_Direct_Military_Colonization:0 "Plan Military Colonization" 
+  PB_RUS_Direct_Military_Colonization_desc:0 "Large parts of the current Russian population of the Siberian wasteland has come to the Far East as soldiers, settling in the region with government assistance due to the need to secure Russia's Far Eastern borders from any threat coming from Asia. An example of this is the Amur Cossack Host, which was allowed to be formed by Moscow due to the need for military security on the Sinno-Russian border." 
+  PB_RUS_Exploit_Fergana_Valley:0 "Exploit the Fergana Valley"
+  PB_RUS_Exploit_Fergana_Valley_desc:0 "Since the start of the 20th century, Russian academics have known of the elusive properties of the minerals found in the Fergana Valley of Central Asia. In 1923, V. I. Popov published his findings of uranium deposits near the highway in the North of the Fergana Valley, leading to a booming interest in Central Asia and the Fergana Valley specifically for geologists and physicists. With the industrialization of the region and the necessary infrastructure in place, the Fergana Valley can be properly charted and mined for that sweet glowing uranium ore." 
+
+  PB_RUS_CSPC_ESTABLISHED:0 "The §YCentral Siberian Plan Committee (CSPC)§! has been established in a Russian city." 
+
+
 
   ##########################
   # BALANCE OF POWER
