Russia Work and Malta

--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -4036,3 +4036,78 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   PGA_RUS_ds_ADJ:0 "Galician"
   PGA_RUS_cn_ADJ:0 "Galician"
   PGA_RUS_an_ADJ:0 "Galician"
+
+  RUS_Cosmist_ni:0 "Empire of Holy Russia"
+  RUS_Cosmist_ni_DEF:0 "The Transcendant Empire of Holy Russia"
+  RUS_Cosmist_ds:0 "Empire of Holy Russia"
+  RUS_Cosmist_ds_DEF:0 "The Transcendant Empire of Holy Russia"
+  RUS_Cosmist_rc:0 "Empire of Holy Russia"
+  RUS_Cosmist_rc_DEF:0 "The Transcendant Empire of Holy Russia"
+  RUS_Cosmist_an:0 "Empire of Holy Russia"
+  RUS_Cosmist_an_DEF:0 "The Transcendant Empire of Holy Russia"
+  RUS_Cosmist_cn:0 "Empire of Holy Russia"
+  RUS_Cosmist_cn_DEF:0 "The Transcendant Empire of Holy Russia"
+  RUS_Cosmist_lb:0 "Empire of Holy Russia"
+  RUS_Cosmist_lb_DEF:0 "The Transcendant Empire of Holy Russia"
+  RUS_Cosmist_ss:0 "Empire of Holy Russia"
+  RUS_Cosmist_ss_DEF:0 "The Transcendant Empire of Holy Russia"
+  RUS_Cosmist_jc:0 "Empire of Holy Russia"
+  RUS_Cosmist_jc_DEF:0 "The Transcendant Empire of Holy Russia"
+  RUS_Cosmist_ni_ADJ:0 "Russian"
+  RUS_Cosmist_rc_ADJ:0 "Russian"
+  RUS_Cosmist_lb_ADJ:0 "Russian"
+  RUS_Cosmist_ss_ADJ:0 "Russian"
+  RUS_Cosmist_jc_ADJ:0 "Russian"
+  RUS_Cosmist_ds_ADJ:0 "Russian"
+  RUS_Cosmist_cn_ADJ:0 "Russian"
+  RUS_Cosmist_an_ADJ:0 "Russian"
+
+  RUS_Commonality_ni:0 "Russian Imperial Commonality"
+  RUS_Commonality_ni_DEF:0 "The Empire of the United Russian Commonality"
+  RUS_Commonality_ds:0 "Russian Imperial Commonality"
+  RUS_Commonality_ds_DEF:0 "The Empire of the United Russian Commonality"
+  RUS_Commonality_rc:0 "Russian Imperial Commonality"
+  RUS_Commonality_rc_DEF:0 "The Empire of the United Russian Commonality"
+  RUS_Commonality_an:0 "Russian Imperial Commonality"
+  RUS_Commonality_an_DEF:0 "The Empire of the United Russian Commonality"
+  RUS_Commonality_cn:0 "Russian Imperial Commonality"
+  RUS_Commonality_cn_DEF:0 "The Empire of the United Russian Commonality"
+  RUS_Commonality_lb:0 "Russian Imperial Commonality"
+  RUS_Commonality_lb_DEF:0 "The Empire of the United Russian Commonality"
+  RUS_Commonality_ss:0 "Russian Imperial Commonality"
+  RUS_Commonality_ss_DEF:0 "The Empire of the United Russian Commonality"
+  RUS_Commonality_jc:0 "Russian Imperial Commonality"
+  RUS_Commonality_jc_DEF:0 "The Empire of the United Russian Commonality"
+  RUS_Commonality_ni_ADJ:0 "Russian"
+  RUS_Commonality_rc_ADJ:0 "Russian"
+  RUS_Commonality_lb_ADJ:0 "Russian"
+  RUS_Commonality_ss_ADJ:0 "Russian"
+  RUS_Commonality_jc_ADJ:0 "Russian"
+  RUS_Commonality_ds_ADJ:0 "Russian"
+  RUS_Commonality_cn_ADJ:0 "Russian"
+  RUS_Commonality_an_ADJ:0 "Russian"
+
+  RUS_Common_Empire_ni:0 "Russian Empire of the Common Man"
+  RUS_Common_Empire_ni_DEF:0 "The United Empire of the Common Man"
+  RUS_Common_Empire_ds:0 "Russian Empire of the Common Man"
+  RUS_Common_Empire_ds_DEF:0 "The United Empire of the Common Man"
+  RUS_Common_Empire_rc:0 "Russian Empire of the Common Man"
+  RUS_Common_Empire_rc_DEF:0 "The United Empire of the Common Man"
+  RUS_Common_Empire_an:0 "Russian Empire of the Common Man"
+  RUS_Common_Empire_an_DEF:0 "The United Empire of the Common Man"
+  RUS_Common_Empire_cn:0 "Russian Empire of the Common Man"
+  RUS_Common_Empire_cn_DEF:0 "The United Empire of the Common Man"
+  RUS_Common_Empire_lb:0 "Russian Empire of the Common Man"
+  RUS_Common_Empire_lb_DEF:0 "The United Empire of the Common Man"
+  RUS_Common_Empire_ss:0 "Russian Empire of the Common Man"
+  RUS_Common_Empire_ss_DEF:0 "The United Empire of the Common Man"
+  RUS_Common_Empire_jc:0 "Russian Empire of the Common Man"
+  RUS_Common_Empire_jc_DEF:0 "The United Empire of the Common Man"
+  RUS_Common_Empire_ni_ADJ:0 "Russian"
+  RUS_Common_Empire_rc_ADJ:0 "Russian"
+  RUS_Common_Empire_lb_ADJ:0 "Russian"
+  RUS_Common_Empire_ss_ADJ:0 "Russian"
+  RUS_Common_Empire_jc_ADJ:0 "Russian"
+  RUS_Common_Empire_ds_ADJ:0 "Russian"
+  RUS_Common_Empire_cn_ADJ:0 "Russian"
+  RUS_Common_Empire_an_ADJ:0 "Russian"
