--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -9090,6 +9090,31 @@ MLD:0 "Republic Of The Maldives"
 MLD_DEF:0 "Republic Of The Maldives"
 MLD_ADJ:0 "Maldivian"
 
+MLT_ni:0 "Maltese Protectorate"
+MLT_ni_DEF:0 "The Crown Colony of Malta"
+MLT_ds:0 "Maltese Protectorate"
+MLT_ds_DEF:0 "The Crown Colony of Malta"
+MLT_rc:0 "Maltese Protectorate"
+MLT_rc_DEF:0 "The Crown Colony of Malta"
+MLT_an:0 "Maltese Protectorate"
+MLT_an_DEF:0 "The Crown Colony of Malta"
+MLT_cn:0 "Maltese Protectorate"
+MLT_cn_DEF:0 "The Crown Colony of Malta"
+MLT_lb:0 "Maltese Protectorate"
+MLT_lb_DEF:0 "The Crown Colony of Malta"
+MLT_ss:0 "Maltese Protectorate"
+MLT_ss_DEF:0 "The Crown Colony of Malta"
+MLT_jc:0 "Maltese Protectorate"
+MLT_jc_DEF:0 "The Crown Colony of Malta"
+MLT_ni_ADJ:0 "Maltese"
+MLT_rc_ADJ:0 "Maltese"
+MLT_lb_ADJ:0 "Maltese"
+MLT_ss_ADJ:0 "Maltese"
+MLT_jc_ADJ:0 "Maltese"
+MLT_ds_ADJ:0 "Maltese"
+MLT_cn_ADJ:0 "Maltese"
+MLT_an_ADJ:0 "Maltese"
+
 ###################################
 # TEMPLATE
 ################################### #use the or so help me i will find you #*this not the
