--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -110,7 +110,8 @@
   PRS_Trade_Tooltip:0 "Every democractic nation will gain an additional §G+50§! trade relations with §YPrussia§!"
   PB_PRS_The_Last_One_Standing_tt:0 "\nWe must holdout against the Pacte for 250 days if we wish to prove ourselves as the legitimate German state.\n\nYou must complete all the below focuses while at war with the Pacte if you wish to inherit the remains of Habsburg Germany."
   PB_PRS_Germany_United_tt:0 "Once France is defeated you will gain control over all French occupied regions in Germany, same for Russia as well.\n\n"
- 
+  PB_PRS_Alliance_With_The_Anglos_tt:0 "\n§gThe British AI will always approve of this request§!"
+
   ##########################
   # MECHANICS
   ##########################
@@ -627,16 +628,16 @@
   PB_PRS_Declare_The_Kingdom_desc:0 ""
   PB_PRS_Petition_Germany:0 "Petition Germany"
   PB_PRS_Petition_Germany_desc:0 ""
-  PB_PRS_A_Whip_Against_Neo_Imperialism:0 "A Whip Against Neo-Imperialism"
-  PB_PRS_A_Whip_Against_Neo_Imperialism_desc:0 ""
+  PB_PRS_German_War_Games:0 "German War Games"
+  PB_PRS_German_War_Games_desc:0 ""
   PB_PRS_State_Visit_To_London:0 "A State Visit To London"
   PB_PRS_State_Visit_To_London_desc:0 ""
   PB_PRS_Alliance_With_The_Anglos:0 "Alliance With The Anglos"
   PB_PRS_Alliance_With_The_Anglos_desc:0 ""
   PB_PRS_Amercican_Overtures:0 "American Overtures"  
   PB_PRS_Amercican_Overtures_desc:0 ""
-  PB_PRS_Surrounded_By_Fools_And_Tyrants:0 "Surrouned By Fools And Tyrants"
-  PB_PRS_Surrounded_By_Fools_And_Tyrants_desc:0 ""
+  PB_PRS_Invite_American_Industrial_Experts:0 "Invite American Industrial Experts"
+  PB_PRS_Invite_American_Industrial_Experts_desc:0 ""
   PB_PRS_Stay_The_Course:0 "Stay The Course"
   PB_PRS_Stay_The_Course_desc:0 ""
   PB_PRS_Declare_The_New_Empire:0 "Declare The New Empire"
@@ -814,6 +815,20 @@
   Prussian_Anarcho.2.t:0 "The Royal Coup"
   Prussian_Anarcho.2.d:0 "" 
   Prussian_Anarcho.2.a:0 "Caught with our pants down."
+  Prussian_Anarcho.3.t:0 "Prussian Diplomatic Outreach"
+  Prussian_Anarcho.3.d:0 "" 
+  Prussian_Anarcho.3.a:0 "We welcome this change of heart."
+  Prussian_Anarcho.4.t:0 "Prussia Requests Entry Into Our Alliance"
+  Prussian_Anarcho.4.d:0 "" 
+  Prussian_Anarcho.4.a:0 "This will strengthen our position in Europe, approve of their entry."
+  Prussian_Anarcho.4.b:0 "They're a risky gamble, better not poke the bear."
+  Prussian_Anarcho.5.t:0 "Britain Welcomes Us To Their Alliance"
+  Prussian_Anarcho.5.d:0 "" 
+  Prussian_Anarcho.5.a:0 "Wonderful."
+  Prussian_Anarcho.6.t:0 "Britain Refuses Our Request"
+  Prussian_Anarcho.6.d:0 "" 
+  Prussian_Anarcho.6.a:0 "What!"
+
 
   ##########################
   # COSMETIC TAGS
