doctrine systems work

--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -22,6 +22,9 @@
  NI_VARIANT_06:0 "§ONeo-Colonialism§!"
  NI_VARIANT_06_desc:0 "§ONeo-Colonialism§! refers to a particularly ultranationalist variant of imperial colonialism. Rather than merely lording over the colonized groups, Neo-Colonialist regimes seek to actively impose their culture and hierarchy on these foreign groups.\n\nAs an ideology, Neo-Colonialism is a relatively recent invention. The political radicalization of countries like France have created new strains of imperial ideological thought, including Neo-Colonialism. The ideology has primarily gained traction in the Green Sahara colonies, where Europeanization is still maintained in full."
 
+ NI_VARIANT_07:0 "§OMartian Supremacism§!"
+ NI_VARIANT_07_desc:0 "§OMartian Supremacism§! relates to the ideology of the Martian extraterrestrials currently occupying Earth. Hailing from a dying planet, the Martians see humans as squandering the Earth after their own homeworld was destroyed by shifting climates and atomic warfare. This attack, with the goal of exterminating mankind and seizing our planet, is the last desperate gasp of a once mighty empire."
+
  ds:0 "Despotism"
  ds_noun:0 "Despotism"
  ds_desc:0 "Despotist State"
@@ -1113,6 +1116,57 @@
   MEX_ds_party_long:0 "Dinastía Iturbide"
   MEX_ni_party:0 "Partido Nacional de Rejuvenecimiento"
   MEX_ni_party_long:0 "Partido Nacional de Rejuvenecimiento Mexicano"
+
+  TFH_jc_party:0 "HWF(E)"
+  TFH_jc_party_long:0 "Hive Workers Front - Earth Branch"
+  TFH_ss_party:0 "Underminer's Union"
+  TFH_ss_party_long:0 "Underminer's Union"
+  TFH_lb_party:0 "Human Collaborators"
+  TFH_lb_party_long:0 "Disgusting Liberal Human Collaborators"
+  TFH_cn_party:0 "Human Collaborators"
+  TFH_cn_party_long:0 "Distasteful Conservative Human Collaborators"
+  TFH_rc_party:0 "TFH(NS)"
+  TFH_rc_party_long:0 "Task Force Helios - Nerve Stapling Faction"
+  TFH_an_party:0 "MARSCORP"
+  TFH_an_party_long:0 "MARSCORP Interests"
+  TFH_ds_party:0 "TFH(ME)"
+  TFH_ds_party_long:0 "Task Force Helios - Moderate Extermination Faction"
+  TFH_ni_party:0 "TFH(E)"
+  TFH_ni_party_long:0 "Task Force Helios - Extermination Faction"
+
+  TFD_jc_party:0 "HWF(E)"
+  TFD_jc_party_long:0 "Hive Workers Front - Earth Branch"
+  TFD_ss_party:0 "Underminer's Union"
+  TFD_ss_party_long:0 "Underminer's Union"
+  TFD_lb_party:0 "Human Collaborators"
+  TFD_lb_party_long:0 "Disgusting Liberal Human Collaborators"
+  TFD_cn_party:0 "Human Collaborators"
+  TFD_cn_party_long:0 "Distasteful Conservative Human Collaborators"
+  TFD_rc_party:0 "TFD(NS)"
+  TFD_rc_party_long:0 "Task Force Deimos - Nerve Stapling Faction"
+  TFD_an_party:0 "MARSCORP"
+  TFD_an_party_long:0 "MARSCORP Interests"
+  TFD_ds_party:0 "TFD(ME)"
+  TFD_ds_party_long:0 "Task Force Deimos - Moderate Extermination Faction"
+  TFD_ni_party:0 "TFD(E)"
+  TFD_ni_party_long:0 "Task Force Deimos - Extermination Faction"
+
+  TFP_jc_party:0 "HWF(E)"
+  TFP_jc_party_long:0 "Hive Workers Front - Earth Branch"
+  TFP_ss_party:0 "Underminer's Union"
+  TFP_ss_party_long:0 "Underminer's Union"
+  TFP_lb_party:0 "Human Collaborators"
+  TFP_lb_party_long:0 "Disgusting Liberal Human Collaborators"
+  TFP_cn_party:0 "Human Collaborators"
+  TFP_cn_party_long:0 "Distasteful Conservative Human Collaborators"
+  TFP_rc_party:0 "TFP(NS)"
+  TFP_rc_party_long:0 "Task Force Phobos - Nerve Stapling Faction"
+  TFP_an_party:0 "MARSCORP"
+  TFP_an_party_long:0 "MARSCORP Interests"
+  TFP_ds_party:0 "TFP(ME)"
+  TFP_ds_party_long:0 "Task Force Phobos - Moderate Extermination Faction"
+  TFP_ni_party:0 "TFP(E)"
+  TFP_ni_party_long:0 "Task Force Phobos - Extermination Faction"
 
  ############
  # POLITICAL PARTY TEMPLATE 
