--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -8870,6 +8870,81 @@ SAN_an_ADJ:0 "Indian"
  ATX_cn_ADJ:0 "American-Tejano"
  ATX_an_ADJ:0 "American-Tejano"
 
+ TFH_ni:0 "Invasion Force Helios"
+ TFH_ni_DEF:0 "The Helios Task Force"
+ TFH_ds:0 "Invasion Force Helios"
+ TFH_ds_DEF:0 "The Helios Task Force"
+ TFH_rc:0 "Invasion Force Helios"
+ TFH_rc_DEF:0 "The Helios Task Force"
+ TFH_an:0 "Invasion Force Helios"
+ TFH_an_DEF:0 "The Helios Task Force"
+ TFH_cn:0 "Invasion Force Helios"
+ TFH_cn_DEF:0 "The Helios Task Force"
+ TFH_lb:0 "Invasion Force Helios"
+ TFH_lb_DEF:0 "The Helios Task Force"
+ TFH_ss:0 "Invasion Force Helios"
+ TFH_ss_DEF:0 "The Helios Task Force"
+ TFH_jc:0 "Invasion Force Helios"
+ TFH_jc_DEF:0 "The Helios Task Force"
+ TFH_ni_ADJ:0 "Martian"
+ TFH_rc_ADJ:0 "Martian"
+ TFH_lb_ADJ:0 "Martian"
+ TFH_ss_ADJ:0 "Martian"
+ TFH_jc_ADJ:0 "Martian"
+ TFH_ds_ADJ:0 "Martian"
+ TFH_cn_ADJ:0 "Martian"
+ TFH_an_ADJ:0 "Martian"
+
+ TFD_ni:0 "Assault Force Deimos"
+ TFD_ni_DEF:0 "The Deimos Strike Force"
+ TFD_ds:0 "Assault Force Deimos"
+ TFD_ds_DEF:0 "The Deimos Strike Force"
+ TFD_rc:0 "Assault Force Deimos"
+ TFD_rc_DEF:0 "The Deimos Strike Force"
+ TFD_an:0 "Assault Force Deimos"
+ TFD_an_DEF:0 "The Deimos Strike Force"
+ TFD_cn:0 "Assault Force Deimos"
+ TFD_cn_DEF:0 "The Deimos Strike Force"
+ TFD_lb:0 "Assault Force Deimos"
+ TFD_lb_DEF:0 "The Deimos Strike Force"
+ TFD_ss:0 "Assault Force Deimos"
+ TFD_ss_DEF:0 "The Deimos Strike Force"
+ TFD_jc:0 "Assault Force Deimos"
+ TFD_jc_DEF:0 "The Deimos Strike Force"
+ TFD_ni_ADJ:0 "Martian"
+ TFD_rc_ADJ:0 "Martian"
+ TFD_lb_ADJ:0 "Martian"
+ TFD_ss_ADJ:0 "Martian"
+ TFD_jc_ADJ:0 "Martian"
+ TFD_ds_ADJ:0 "Martian"
+ TFD_cn_ADJ:0 "Martian"
+ TFD_an_ADJ:0 "Martian"
+
+ TFP_ni:0 "Extermination Unit Phobos"
+ TFP_ni_DEF:0 "The Phobos Strike Force"
+ TFP_ds:0 "Extermination Unit Phobos"
+ TFP_ds_DEF:0 "The Phobos Strike Force"
+ TFP_rc:0 "Extermination Unit Phobos"
+ TFP_rc_DEF:0 "The Phobos Strike Force"
+ TFP_an:0 "Extermination Unit Phobos"
+ TFP_an_DEF:0 "The Phobos Strike Force"
+ TFP_cn:0 "Extermination Unit Phobos"
+ TFP_cn_DEF:0 "The Phobos Strike Force"
+ TFP_lb:0 "Extermination Unit Phobos"
+ TFP_lb_DEF:0 "The Phobos Strike Force"
+ TFP_ss:0 "Extermination Unit Phobos"
+ TFP_ss_DEF:0 "The Phobos Strike Force"
+ TFP_jc:0 "Extermination Unit Phobos"
+ TFP_jc_DEF:0 "The Phobos Strike Force"
+ TFP_ni_ADJ:0 "Martian"
+ TFP_rc_ADJ:0 "Martian"
+ TFP_lb_ADJ:0 "Martian"
+ TFP_ss_ADJ:0 "Martian"
+ TFP_jc_ADJ:0 "Martian"
+ TFP_ds_ADJ:0 "Martian"
+ TFP_cn_ADJ:0 "Martian"
+ TFP_an_ADJ:0 "Martian"
+
 ###################################
 # TEMPLATE
 ################################### #use the or so help me i will find you #*this not the
