Eyo the Tea is here - Falls down the Elevator

--- a/localisation/english/PB_Imperial_Civil_War_l_english.yml
+++ b/localisation/english/PB_Imperial_Civil_War_l_english.yml
@@ -310,6 +310,7 @@
   PM_Demand_toronto_AME:0 "  Demand Huron"
   PM_Demand_superieur_AME:0 "  Demand Superieur"
   PM_Propose_Quebec_Bailout:0 "Offer Bailout to Quebec"
+  PM_Propose_Quebec_Bailout_desc:0 "Quebec is suffering from an economic crisis, one that it will take years for them to recover fully from. For a faster recovery they need foreign help, especially from us - their closest economic partner next to Britian. We can easily sustain an economic health package for our dear neighbour but not without any concession. They have to make a lot more concession regarding the Angloi Situation."
   PM_Free_Military_Package:0 "Offer Free Equipment"
 
   Avoiding_Decisions_Demand_Spam:0 "A State Demand has been made"
@@ -376,3 +377,17 @@
   Anglois_Crisis.14.t:0 "Philadelphia demands the Transfer of Wisconsin"
   Anglois_Crisis.14.d:0 "Rising Unrest in Angloi-Quebec"
   Anglois_Crisis.14.a:0 "A new oppurtunity?"
+
+
+  Anglois_Crisis.33.t:0 "United Commenwealth offers bailout"
+  Anglois_Crisis.33.d:0 ""
+  Anglois_Crisis.33.a:0 "We are a slut for that cold hard cheddar"
+  Anglois_Crisis.33.b:0 "Quebec will survive alone"
+
+  Anglois_Crisis.34.t:0 "Quebec accepts Bailout Opportunity"
+  Anglois_Crisis.34.d:0 ""
+  Anglois_Crisis.34.a:0 "Sluts for that cold hard green cheddar"
+
+  Anglois_Crisis.35.t:0 "Quebec refuses Bailout Opportunity"
+  Anglois_Crisis.35.d:0 "c"
+  Anglois_Crisis.35.a:0 "Idiotic Fools"
