Doctrine rework moved toRussia

--- a/localisation/english/PB_Russia_l_english.yml
+++ b/localisation/english/PB_Russia_l_english.yml
@@ -239,13 +239,21 @@
   ##########################  
   
   PB_RUS_1933_Duma:0 "Third Meeting of the Provisional Duma"
+  PB_RUS_1933_Duma_desc:0 ""
   PB_RUS_Increase_Galician_Forces:0 "Increase Our Forces in Galicia"
+  PB_RUS_Increase_Galician_Forces_desc:0 "Clashes in the Galician hinterlands have grown in intensity lately with the Poles becoming increasingly brazen in their attacks. With the local garrison unable to deal with the situation by themselves it is necessary that additional forces are sent to the region to quell the unrest."
   PB_RUS_Commit_to_Finland:0 "Finnish Off the Winter War"
+  PB_RUS_Commit_to_Finland_desc:0 "The Finnish insurgency has devolved into a bloody slog where we once expected a quick victory, and in the halls of power whispers of our supposed incompetence grow louder every day. We should double down on our efforts to pacify the region, and quickly, before the daggers start getting drawn behind our backs."
   PB_RUS_Expand_Polish_Security:0 "Expand the Polish Okhrana"
+  PB_RUS_Expand_Polish_Security_desc:0 "The Polish separatists are notorious for operating an intricate “deep state” that acts independently of our administration with them even collecting their own taxation right under our noses! In order to restore our unopposed rule, the regional Polish Okhrana will be expanded substantially in order to infiltrate and destroy this elusive shadow government, once and for all."
   PB_RUS_Debate_on_Voting:0 "Debates on Voting Reform"
+  PB_RUS_Debate_on_Voting_desc:0 "It has been clear for many years that the Duma is in an archaic state in its current form. The Tsar still holds an influential position in government thanks to the royal veto, with critics labelling the Duma as simply a ‘House of suggestion’. As such, it is imperative that we restrain the monarch’s powers and reform the system into a much more democratic constitutional monarchy by empowering the Duma.\n\nThis naturally includes revising our administrative structure, with many proposals already having been submitted. The two most popular options presented are that of a regionalist or centralised Duma. The former, favoured by the liberal voices in government, aims to enfranchise minorities by granting more autonomy and power to regional representatives. The latter, supported by the more conservative minds, calls for a centralised top-down approach with power consolidated within Moscow and therefore the ethnic Russian majority. The Duma shall be left to debate on which policy of reform to follow, let us see what Russia’s future holds."
   PB_RUS_Autonomist_Dumas:0 "Allow Regionalist Dumas"
+  PB_RUS_Autonomist_Dumas_desc:0 "Within the capital, the more liberal voices have been calling for our government to grant greater powers and fights to the various minorities within the Empire. As their support will be vital in the future, our hand has been forced to provide a few reforms to placate them. To this end, we will create smaller local dumas. While the autonomy these provide will be fairly minimal, it will hopefully be seen as a token of good faith."
   PB_RUS_All_Russian_Dumas:0 "An All Russian National Duma"
+  PB_RUS_All_Russian_Dumas_desc:0 "After much debate and deliberation, it has been decided that the Duma will adopt a more centralised model. This will allow power to be more efficiently handled from the capital and will give more power to the Russian Majority in the country. Our more liberal detractors argue that this is intended to reduce the power of ethnic minorities within Russia. But that matters not, they have no legal means to pursue such accusations and it shouldn't effect our popularity too much."
   PB_RUS_Begin_St_Petersburg:0 "On to St. Petersburg"
+  PB_RUS_Begin_St_Petersburg_desc:0 "The time has come. The debates are over, the gears of bureacracy have turned and our ministers have spoken. The groundwork for our nation's upcoming elections has been laid, all that remains is to announce them. The Prime Minister and the Tsar will make for St. Petersburg with all haste, to speak before out nation. The future of the Empire will be decided over the next few weeks. May God help us."
 
   PB_RUS_Second_Time_of_Troubles:0 "Mother Russia Bleeds"
   PB_RUS_Blame_Okhrana:0 "Blame the Okhrana"
