--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -6,6 +6,8 @@
  shockjockey_tech:0 "Shock Jockey Tech"
  cat_augmented_infantry:0 "Augmented Infantry"
  infantry_drugs_research:0 "Military-Grade Drugs"
+ category_all_automats:0 "All Automat Units"
+ cat_light_automat:0 "All Light Automat Units"
  automat:0 "Automats"
  automat_research:0 "Automats"
  cat_bioaugmented_unit_research:0 "Biomodified Units"
@@ -405,3 +407,70 @@
  special_forces_cowboys_7_desc:0 "The enduring legacy of Ned Kelly has fruited various advancements in Cowboy military technology. The most influential advancement that Kelly offered the Wild West was his signature metal plated armour, something that has become widely adopted throughout the Wild West."
  special_forces_cowboys_8:0 "Promote Cavarly Tactics"
  special_forces_cowboys_8_desc:0 "Many gunslingers travel on horseback but there efficiency is questionable at best, at least in terms of discipline. We can integrate their love of speed with traditional cavarly tactics to make them a formidable force."
+
+ supremacy_of_steel:0 "Supremacy of Steel"
+ supremacy_of_steel_desc:0 "It thorough the might of Steel that Charlemagne united Europe, that Mehmed II brought the end to Rome, and just like the past war, it will be Steel that wins the next war."
+ sos_delaying_actions:0 "Delaying Action"
+ sos_delaying_actions_desc:0 "When the enemy is fooled and tricked in every way possible, they shall bleed twice our men"
+ sos_independent_armor:0 "Independent Armor Detachments"
+ sos_independent_armor_desc:0 "The Armor of our nation is the new Winged Hussars of Poland or Elephants of the Mughals. These units shall alone crush whatever and whomever is in their path in a blaze of machinal fury."
+ sos_shock_troopers:0 "Shock Jockey Hardsuits"
+ sos_shock_troopers_desc:0 "Our most skilled men shall be given Hardsuits with extremally high voltage Tasers upon them and used as front line shock troops. A Man shall become Steel just as Steel has become Men."
+ sos_armored_core:0 "An Armored Core"
+ sos_armored_core_desc:0 "Armor is different from the Calvary or Navy they are compared to. They shall be their own units, with their own commanders, and their own tactics. The Infantry shall fallow behind the Steel Hussars."
+ sos_advanced_forces:0 "Advance Forces"
+ sos_lightning_war:0 "Lightning War"
+ sos_full_mechanization:0 "Full Mechanization"
+ sos_deep_penetration:0 "Hunting Parties"
+ sos_indiscriminate_conscription:0 "Indiscriminate Recruitment"
+ sos_mobile_infantry:0 "Mobile Infantry"
+ sos_night_operations:0 "Night Operations"
+ sos_fast_action_units:0 "Fast Action Units"
+ sos_smash_and_grab:0 "Smash and Grab Operations"
+ sos_heavier_armor:0 "Heavier Armor"
+ sos_more_dakka:0 "Heavier Weapons"
+
+ faf_fire_and_fury:0 "Fire and Fury"
+ faf_fuller_auto:0 "Fuller Auto"
+ faf_beans_and_butter:0 "Beans, Butter and Bullets"
+ faf_beans_and_butter_desc:0 "As the needs of a heavily armed, semi-static force grow, maintaining supply lines is even more important. In addition to shells, our troops need the four basic food groups: beans, bacon, whiskey and lard."
+ faf_more_firepower:0 "Weaponized Pyromania"
+ faf_combat_team_organization:0 "Streamlined Stimulant Distribution"
+ faf_thunder_runs:0 "Thunder Runs"
+ faf_automated_targeting:0 "Thinker Targeting Systems"
+ faf_drone_targeting:0 "Drone Coordination"
+ faf_shock_and_awe:0 "Shock and Awe"
+ faf_burnout_doctrine:0 "Burn Em' Out"
+ faf_indiscriminate_fire:0 "Indiscriminate Assault"
+ faf_combined_arms_warfare:0 "Combined Arms Warfare"
+
+ cof_cult_of_the_offensive:0 "Cult of the Offensive"
+ cof_infiltration_troops:0 "Infiltration Tactics"
+ cof_hindenburg_doctrine:0 "Hindenburg Doctrine"
+ cof_bullard_doctrine:0 "Bullard-Haig Doctrine"
+ cof_unified_planning:0 "Unified Planning Committees"
+ cof_armored_core:0 "A Brotherhood of Steel"
+ cof_storm_of_steel:0 "Storm of Steel"
+ cof_stormtroopers:0 "Stormtrooper Tactics"
+ cof_allied_mastercomputing:0 "Allied Mastercomputing"
+ cof_diffuse_command:0 "Diffuse Command"
+ cof_chemical_attrition:0 "Chemical Attrition"
+ cof_rapid_containment:0 "Rapid Containment"
+ cof_shellshock_rotation:0 "Shellshock Rotation"
+ cof_field_therapies:0 "Field Anti-Septic Therapy"
+
+ sof_Supremacy_of_flesh:0 "Supremacy of Flesh"
+ sof_loose_combat_standards:0 "Loosened Combat Standards"
+ sof_enhanced_rations:0 "Enhanced Rations"
+ sof_pocket_defense:0 "Pocket Defense"
+ sof_disposable_principle:0 "Disposability Principle"
+ sof_free_shooters:0 "Free Shooters"
+ sof_wave_of_flesh:0 "Wave of Flesh"
+ sof_emergency_augmentations:0 "Emergency Augmentations"
+ sof_improved_pheremones:0 "Improved Pheromones"
+ sof_guerilla_warfare:0 "Guerilla Warfare"
+ sof_scotopic_vision:0 "Scotopic Vision Augments"
+ sof_resist_and_bite:0 "Resist and Bite"
+ sof_edible_engagements:0 "Edible Engagements"
+
+ cof_chemical_attrition_gas_defense_unlocked:0 "§YThe §!§GGAS DEFENSE§! §YGeneral Ability becomes available.§!"
