--- a/localisation/english/PB_Prussia_l_english.yml
+++ b/localisation/english/PB_Prussia_l_english.yml
@@ -58,6 +58,7 @@
   PB_Great_Reformer_2:0 "Sovereign of Prussia"
   PB_Budget_Balancer_2:0 "Budget Balancer"
   PB_Junker_Support:0 "Junker Support"
+  PB_The_Overseer:0 "The Overseer"
 
   ##########################
   # STATE MODIFIERS
@@ -111,6 +112,9 @@
   PB_PRS_The_Last_One_Standing_tt:0 "\nWe must holdout against the Pacte for 250 days if we wish to prove ourselves as the legitimate German state.\n\nYou must complete all the below focuses while at war with the Pacte if you wish to inherit the remains of Habsburg Germany."
   PB_PRS_Germany_United_tt:0 "Once France is defeated you will gain control over all French occupied regions in Germany, same for Russia as well.\n\n"
   PB_PRS_Alliance_With_The_Anglos_tt:0 "\n§gThe British AI will always approve of this request§!"
+  PB_PRS_The_Men_In_Black_tt:0 "\n§gEnables the International mechanic, allowing for the infiltration of government networks across the globe. Engaging with this mechanic is the only way to receive new research slots.§!"
+  PB_PRS_Imperium_In_Imperio_tt:0 "Has concluded the International mechanic"
+  PB_PRS_Establish_Council_Presence_NA_tt:0 "§GUnlocks§! Council operations in North America"
 
   ##########################
   # MECHANICS
@@ -581,6 +585,23 @@
   PB_PRS_Supremacy_Of_The_Will_desc:0 "Despite the fact that the total population of our country stands at a little under ten milliion citizens we have exceeded expectations both internally and externally in regards to the state of our military. But the time will eventually come where we are unable to field any more soldiers and when that day does arrive we must have a plan in motion."
   PB_Placate_The_War_Profiteers:0 "Placate The War Profiteers"
   PB_Placate_The_War_Profiteers_desc:0 "The importance of war profiteers during wartime is a complex and controversial aspect of armed conflicts. While war profiteering can be seen as ethically questionable and exploitative, it cannot be denied that these entities often play a significant role in sustaining a nation's war effort. If we wish to meet the industrial output of the world's greatest powers then we are going to have to sideline some of our core beliefs."
+  PB_PRS_The_Men_In_Black:0 "The Men In Black"
+  PB_PRS_The_Men_In_Black_desc:0 ""
+  PB_PRS_Establish_Council_Presence_NA:0 "Establish Council Presence: §YNorth America§!"
+  PB_PRS_Establish_Council_Presence_NA_desc:0 ""
+  PB_PRS_Establish_Council_Presence_SA:0 "Establish Council Presence: §YSouth America§!"
+  PB_PRS_Establish_Council_Presence_SA_desc:0 ""
+  PB_PRS_Establish_Council_Presence_EU:0 "Establish Council Presence: §YEurope§!"
+  PB_PRS_Establish_Council_Presence_EU_desc:0 ""
+  PB_PRS_Establish_Council_Presence_AF:0 "Establish Council Presence: §YAfrica§!"
+  PB_PRS_Establish_Council_Presence_AF_desc:0 ""
+  PB_PRS_Establish_Council_Presence_AS:0 "Establish Council Presence: §YAsia§!"
+  PB_PRS_Establish_Council_Presence_AS_desc:0 ""
+  PB_PRS_Establish_Council_Presence_ME:0 "Establish Council Presence: §YMiddle East§!"
+  PB_PRS_Establish_Council_Presence_ME_desc:0 ""
+  PB_PRS_Imperium_In_Imperio:0 "Imperium In Imperio"
+  PB_PRS_Imperium_In_Imperio_desc:0 ""
+  
 
   ## ANARCHO-LIB
 
